objects/Technical__kav.object
<CustomObject><fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Additional_Links__c</fullName>
        <label>Additional Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat Answer</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Technical_Detail__c</fullName>
        <label>Technical Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Technical_Overview__c</fullName>
        <label>Technical Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>InDevelopment</deploymentStatus><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><label>Technical</label><pluralLabel>Technical</pluralLabel></CustomObject>